[project]
name = "orchestration"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.6",
    "dagster-cloud==0.16.0",
    "dagster-airbyte==0.28.6",
    "dagster-dbt==0.28.6",
    "dbt-core==1.6.4",
    "dbt-snowflake==1.6.4"
]

[dependency-groups]
dev = [
    "dagster-dg-cli>=1.11.11",
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dagster]
module_name = "orchestration.definitions"
code_location_name = "orchestration"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "orchestration"