[project]
name = "orchestration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    # Dagster core
    "dagster==1.12.12",
    "dagster-cloud==0.8.2",
    "dagster-airbyte==0.28.2",
    
    # Dagster dbt integration
    "dagster-dbt==0.28.6",
    
    # Pin dbt-core and dbt adapter
    "dbt-core==1.10.0",
    "dbt-snowflake==1.10.0"
]


[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "orchestration.definitions"
code_location_name = "orchestration"

[tool.setuptools.packages.find]
exclude=["analytics_tests"]
